prefer NIO
GitOrigin-RevId: c13a92dbcd4013c184f02cc6d0a332a318f1f41a