@@ -6,6 +6,7 @@ import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.io.FileFilters;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.uiDesigner.compiler.AlienFormFileException;
 import com.intellij.util.containers.FileCollectionFactory;
@@ -33,6 +34,7 @@ import org.jetbrains.jps.uiDesigner.model.JpsUiDesignerExtensionService;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
@@ -112,7 +114,7 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
 
     final Map<File, ModuleBuildTarget> filesToCompile = FileCollectionFactory.createCanonicalFileMap();
     final Map<File, ModuleBuildTarget> formsToCompile = FileCollectionFactory.createCanonicalFileMap();
-    final Map<File, Collection<File>> srcToForms = FileCollectionFactory.createCanonicalFileMap();
+    final Map<Path, Collection<Path>> srcToForms = FileCollectionFactory.createCanonicalPathMap();
 
     if (!JavaBuilderUtil.isForcedRecompilationAllJavaModules(context) && config.isInstrumentClasses() && FORCE_FORMS_REBUILD_FLAG.get(context, Boolean.FALSE)) {
       // force compilation of all forms, but only once per chunk
@@ -147,15 +149,15 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
         final File form = entry.getKey();
         final ModuleBuildTarget target = entry.getValue();
         try {
-          final Collection<File> sources = findBoundSourceCandidates(context, target, form);
+          final Collection<Path> sources = findBoundSourceCandidates(context, target, form);
           boolean isFormBound = false;
-          for (File boundSource : sources) {
-            if (!excludes.isExcluded(boundSource)) {
+          for (Path boundSource : sources) {
+            if (!excludes.isExcluded(boundSource.toFile())) {
               isFormBound = true;
-              FormBindings.addBinding(boundSource, form, srcToForms);
+              FormBindings.addBinding(boundSource, form.toPath(), srcToForms);
               holderBuilder.markDirtyFile(target, boundSource);
               context.getScope().markIndirectlyAffected(target, boundSource);
-              filesToCompile.put(boundSource, target);
+              filesToCompile.put(boundSource.toFile(), target);
               exitCode = ExitCode.OK;
             }
           }
@@ -183,13 +185,13 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
         }
 
         for (String formPath : boundForms) {
-          File formFile = new File(formPath);
-          if (!excludes.isExcluded(formFile) && formFile.exists()) {
-            FormBindings.addBinding(srcFile, formFile, srcToForms);
+          Path formFile = Path.of(formPath);
+          if (!excludes.isExcluded(formFile.toFile()) && Files.exists(formFile)) {
+            FormBindings.addBinding(srcFile.toPath(), formFile, srcToForms);
             holderBuilder.markDirtyFile(target, formFile);
 
             context.getScope().markIndirectlyAffected(target, formFile);
-            formsToCompile.put(formFile, target);
+            formsToCompile.put(formFile.toFile(), target);
             exitCode = ExitCode.OK;
           }
         }
@@ -205,7 +207,7 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
         if (!target.isTests()) {
           final File outputDir = target.getOutputDir();
           if (outputDir != null) {
-            final String outputRoot = FileUtil.toSystemIndependentName(outputDir.getPath());
+            final String outputRoot = FileUtilRt.toSystemIndependentName(outputDir.getPath());
             final List<File> generatedFiles = CopyResourcesUtil.copyFormsRuntime(outputRoot, false);
             if (!generatedFiles.isEmpty()) {
               exitCode = ExitCode.OK;
@@ -225,7 +227,7 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
   private static boolean containsValidForm(Set<File> files) {
     for (File file : files) {
       try {
-        if (FormsParsing.readBoundClassName(file) != null) {
+        if (FormsParsing.readBoundClassName(file.toPath()) != null) {
           return true;
         }
       }
@@ -235,25 +237,27 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
     return false;
   }
 
-  private static @NotNull Collection<File> findBoundSourceCandidates(CompileContext context, final ModuleBuildTarget target, File form) throws IOException, AlienFormFileException {
+  private static @NotNull Collection<Path> findBoundSourceCandidates(CompileContext context, final ModuleBuildTarget target, File form) throws IOException, AlienFormFileException {
     final List<JavaSourceRootDescriptor> targetRoots = context.getProjectDescriptor().getBuildRootIndex().getTargetRoots(target, context);
     if (targetRoots.isEmpty()) {
-      return Collections.emptyList();
+      return List.of();
     }
-    final String className = FormsParsing.readBoundClassName(form);
+
+    String className = FormsParsing.readBoundClassName(form.toPath());
     if (className == null) {
-      return Collections.emptyList();
+      return List.of();
     }
+
     for (JavaSourceRootDescriptor rd : targetRoots) {
       final File boundSource = findSourceForClass(rd, className);
       if (boundSource != null) {
-        return Collections.singleton(boundSource);
+        return List.of(boundSource.toPath());
       }
     }
 
-    final Set<File> candidates = FileCollectionFactory.createCanonicalFileSet();
+    Set<Path> candidates = FileCollectionFactory.createCanonicalPathSet();
     for (JavaSourceRootDescriptor rd : targetRoots) {
-      candidates.addAll(findPossibleSourcesForClass(rd, className));
+      collectPossibleSourcesForClass(rd, className, candidates);
     }
     return candidates;
   }
@@ -276,20 +280,30 @@ public final class FormsBindingManager extends ModuleLevelBuilder {
     }
   }
 
-  private static @NotNull Collection<File> findPossibleSourcesForClass(JavaSourceRootDescriptor rd, final @Nullable String boundClassName) {
+  private static void collectPossibleSourcesForClass(@NotNull JavaSourceRootDescriptor rootDescriptor,
+                                                     @Nullable String boundClassName,
+                                                     @NotNull Set<Path> result) {
     if (boundClassName == null) {
-      return Collections.emptyList();
+      return;
     }
-    String relPath = suggestRelativePath(rd, boundClassName);
-    final File containingDirectory = new File(rd.getRootFile(), relPath).getParentFile();
+
+    String relPath = suggestRelativePath(rootDescriptor, boundClassName);
+    Path containingDirectory = rootDescriptor.getFile().resolve(relPath).getParent();
     if (containingDirectory == null) {
-      return Collections.emptyList();
+      return;
     }
-    final File[] files = containingDirectory.listFiles(FileFilters.withExtension("java"));
-    if (files == null || files.length == 0) {
-      return Collections.emptyList();
+
+    try {
+      try (DirectoryStream<Path> stream = Files.newDirectoryStream(containingDirectory, "*.java")) {
+        for (Path file : stream) {
+          if (Files.isRegularFile(file)) {
+            result.add(file);
+          }
+        }
+      }
     }
-    return Arrays.asList(files);
+    catch (IOException ignored) {
+    }
   }
 
   private static @NotNull String suggestRelativePath(@NotNull JavaSourceRootDescriptor rd, @NotNull String className) {
